@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2015, 2016, 2017 Laboratoire de Recherche et
+# Copyright (C) 2015-2017, 2019 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -37,3 +37,14 @@ diff aut1.hoa aut2.hoa
 
 test "ltl2tgba -D" = \
   "`ltldo 'ltl2tgba -D' ltl2tgba -f 'Ga | Gb | Gc' --greatest=%e --stats=%T`"
+
+
+ltldo --negate 'ltl2tgba -D' -f FGa --stats=%f,%s >out.csv
+ltldo --negate 'ltl2tgba -D' --lbt-input -f 'F G a' --stats=%f,%s >>out.csv
+ltl2tgba --negate -D FGa --stats=%f,%s >>out.csv
+cat >expected <<EOF
+!FGa,1
+! F G "a",1
+GF!a,1
+EOF
+diff out.csv expected
